--- a/app/src/styles/home.css
+++ b/app/src/styles/home.css
@@ -583,7 +583,7 @@ body {
   position: absolute;
   right: 60px;
   z-index: 4;
-  margin-top: 10px;
+  margin-top: 17px;
   font-size: 1.1em;
   color: #435f7a;
   opacity: .5;
@@ -604,6 +604,7 @@ body {
   width: 50px;
   padding: 9.5px 0;
   margin-top: 5.5px;
+  margin-bottom: 0px;
   cursor: pointer;
   background: #32465a;
   color: #f5f5f5;
@@ -684,4 +685,9 @@ p {
 #img-chat{
   width: 35px !important;
   margin-top: 11px !important;
+}
+
+.text-chat{
+  padding: 0px !important;
+  padding-top: 10px;
 }
