--- a/app/src/styles/home.css
+++ b/app/src/styles/home.css
@@ -566,7 +566,7 @@ body {
   font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
   float: left;
   border: none;
-  width: calc(100% - 90px);
+  width: calc(100% - 180px);
   padding: 0px 32px 0px 7px;
   font-size: 1.2em;
   color: #32465a;
@@ -603,7 +603,7 @@ body {
   border: none;
   width: 50px;
   padding: 9.5px 0;
-  margin-top: 5.5px;
+  margin-top: 24.5px;
   margin-bottom: 0px;
   cursor: pointer;
   background: #32465a;
@@ -692,11 +692,62 @@ p {
   padding-top: 10px;
 }
 #frame .content .message-input .wrap input{
-  padding: 14px 32px 0px 7px !important;
+  padding: 14px 32px 0px 7px;
 
 }
 
-/* .load-image{
+.load-image{
   font-size: 25px;
-  margin-top: 20px;
-} */
+  padding-left: 55px;
+  padding-top: 23px;
+  cursor: pointer !important;
+}
+
+
+
+
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.btn {
+  border: 2px solid gray;
+  color: gray;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.upload-btn-wrapper input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+
+#image-message {
+  width: 50% !important;
+  border-radius: 0 !important;
+}
+
+#file {
+    width: 0px !important;
+    height: 0px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+    padding: 0 !important;
+}
+
+.load-image{
+  cursor: pointer;
+  padding: 0px !important;
+  margin-left: 50px;
+  margin-top: 27px;
+}
