--- a/app/src/styles/home.css
+++ b/app/src/styles/home.css
@@ -384,7 +384,7 @@ body {
 }
 #frame #sidepanel #contacts ul li.contact .wrap span {
   position: absolute;
-  margin: -2px 0 0 -2px;
+  margin: 0 0 0 -2px;
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -493,7 +493,8 @@ body {
   height: auto;
   position: absolute;
   width: 100%;
-  min-height: calc(100% - 93px);
+  /* min-height: calc(100% - 93px); */
+  height: 65%;
   max-height: calc(100% - 93px);
   overflow-y: scroll;
   overflow-x: hidden;
@@ -558,6 +559,9 @@ body {
   bottom: 0;
   width: 100%;
   z-index: 99;
+  height: 24%;
+  overflow: auto;
+  border-top: 1px solid grey;
 }
 #frame .content .message-input .wrap {
   position: relative;
@@ -599,12 +603,14 @@ body {
   opacity: 1;
 }
 #frame .content .message-input .wrap button {
-  float: right;
+  /* float: right; */
   border: none;
   width: 50px;
   padding: 9.5px 0;
-  margin-top: 24.5px;
-  margin-bottom: 0px;
+  /* margin-top: 24.5px;
+  margin-bottom: 0px; */
+  margin: 10px 5px 0 16px;
+  float: right;
   cursor: pointer;
   background: #32465a;
   color: #f5f5f5;
@@ -630,9 +636,19 @@ p {
 .name{
   font-size: 12px;
 }
+
+.status{
+  display: inline-block;
+  margin-left: 10px !important;
+  position: relative;
+  top: -2px;
+}
 .preview{
-  margin-top: -4px !important;
+  margin-top: 1px !important;
   padding-left: 10px !important;
+  width: 80%;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 .sent p {
   font-size: 10px !important;
@@ -690,16 +706,21 @@ p {
 .text-chat{
   padding: 0px !important;
   padding-top: 10px;
+  margin-top: 0;
 }
 #frame .content .message-input .wrap input{
-  padding: 14px 32px 0px 7px;
-
+  width: 97%;
+  padding: 0 20px;
+  float: none;
 }
 
 .load-image{
-  font-size: 25px;
-  padding-left: 55px;
-  padding-top: 23px;
+  font-size: 40px;
+  padding: 0;
+  margin-bottom: 0px;
+  position: relative;
+  float: right;
+  top: 7px;
   cursor: pointer !important;
 }
 
@@ -730,7 +751,7 @@ p {
   opacity: 0;
 }
 
-#image-message {
+.image-message {
   width: 50% !important;
   border-radius: 0 !important;
 }
@@ -748,16 +769,64 @@ p {
 .load-image{
   cursor: pointer;
   padding: 0px !important;
-  margin-left: 125px;
-  margin-top: 27px;
 }
 
 .preview-image {
-  width: 40px;
+  width: 100px;
+  margin-left: 10px;
+  float: left;
+}
+
+.preview-image:first-child{
+  margin-left: 0;
 }
 
 .preview{
-  width: 100px;
-  margin-left: 482px;
-  display: block;
+  width: 80%;
+  /* margin-left: 482px; */
+  display: inline-flex;
+  float: none;
+}
+
+.fa-star{
+  font-size: 25px;
+}
+
+.check{
+  color: orange;
+}
+
+.uncheck{
+  color: rgb(240, 237, 231);
+}
+
+.rating-star{
+  float: left;
+  position: relative;
+  top: 4px;
+  margin-left: 15px;
+}
+
+.text-chat textarea{
+  margin: 0px;
+  width: 100%;
+  resize: none;
+  height: 80px;
+}
+
+.image-list span.delete{
+  cursor: pointer;
+  padding: 3px 7px;
+  background: black;
+  color: white;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.image-box{
+  display: inline-block;
+  position: relative;
+  float: left;
 }
